# CiteCraft

./: .gitignore  README.md  pyproject.toml
.agents/skills/citecraft-multi-agent/: SKILL.md
.codex/agents/: citecraft-demo-shell-designer.toml  citecraft-growth-editor.toml  citecraft-pipeline-developer.toml  citecraft-repo-explorer.toml  citecraft-trace-reviewer.toml
apps/web/: app.py  i18n.py
apps/web/static/: site.css
apps/web/templates/: deliverable.html  index.html  layout.html  poster.html  source.html  sources.html  trace.html
docs/architecture/: providers.md
docs/contracts/: deliverables.md
docs/operations/: multi-agent.md
docs/positioning/: naming.md
examples/academia/demo-01/: project.yaml
examples/research/demo-01/: project.yaml
src/workbench/: __init__.py
src/workbench/contracts/: __init__.py  deliverables.py  evidence.py  project.py  sources.py
src/workbench/core/: ids.py  serialization.py
src/workbench/deliverables/: __init__.py  brief.py  matrix.py  registry.py  slides.py
src/workbench/evidence/: __init__.py  binder.py  index.py
src/workbench/ingest/: __init__.py  normalize.py
src/workbench/pipeline/: __init__.py  run.py
src/workbench/providers/: __init__.py  base.py  deterministic.py  openai_compatible.py  prompt_recipes.py  registry.py
src/workbench/renderers/: __init__.py  html.py  markdown.py  traces.py
src/workbench/sources/: base.py  folder.py  pdf.py  (+2 more)
templates/deliverables/: brief.yaml  literature_matrix.yaml  slides.yaml
tests/: test_multi_agent_repo_ops.py  test_pipeline.py  test_providers.py  test_web.py
(+31 files in other folders)
