[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-deliverables-workbench"
version = "0.1.0"
description = "A model-agnostic workbench for turning messy sources into cited deliverables."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "Flask>=3.0,<4.0",
  "Jinja2>=3.1,<4.0",
  "Markdown>=3.4,<4.0",
  "PyYAML>=6.0,<7.0",
  "beautifulsoup4>=4.12,<5.0",
  "requests>=2.32,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

